BI viewport render gives incorrect result with volumes #37675

Closed
opened 2013-12-02 04:57:08 +01:00 by gandalf3 · 17 comments
Member

System Information
Archlinux
Nvidia 7900GT

Blender Version
Broken: Blender 2.69 Release (from arch repos)

Short description of error
Rotating and zooming in the 3D view causes viewport render to give incorrect results for volumes.

Exact steps for others to reproduce the error
Based on viewport_volumes.blend

  1. Enable viewport rendering (Shift+Z)
  2. Rotate view and adjust zoom
  3. The volume will be rendered incorrectly. This can be proven by disabling and re enabling viewport render without moving the view, the result will be different.
**System Information** Archlinux Nvidia 7900GT **Blender Version** Broken: Blender 2.69 Release (from arch repos) **Short description of error** Rotating and zooming in the 3D view causes viewport render to give incorrect results for volumes. **Exact steps for others to reproduce the error** Based on [viewport_volumes.blend](https://archive.blender.org/developer/F35823/viewport_volumes.blend) 1. Enable viewport rendering (Shift+Z) 2. Rotate view and adjust zoom 3. The volume will be rendered incorrectly. This can be proven by disabling and re enabling viewport render without moving the view, the result will be different.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Brecht Van Lommel was assigned by Sergey Sharybin 2013-12-02 12:48:58 +01:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, seems to be easy thing -- just re-initialize volume cache on navigation. Mind looking into this?

@brecht, seems to be easy thing -- just re-initialize volume cache on navigation. Mind looking into this?

This issue was referenced by blender/blender-addons-contrib@15927e05e4

This issue was referenced by blender/blender-addons-contrib@15927e05e4f13eb4bb23e82c378a4d0de91456b4

This issue was referenced by 15927e05e4

This issue was referenced by 15927e05e4f13eb4bb23e82c378a4d0de91456b4

Fixed, thanks for the report.

Fixed, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 15927e05e4.

Closed by commit 15927e05e4.
Author
Member

I have noticed this happening again in 2.70, particularly with zooming.

I have noticed this happening again in 2.70, particularly with zooming.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

@gandalf3, does it happen with the same viewport_volumes.blend?

@gandalf3, does it happen with the same viewport_volumes.blend?
Author
Member

@Sergey Yep, it does. I'm using the official 2.70 release from blender.org (19e627c)

@Sergey Yep, it does. I'm using the official 2.70 release from blender.org (19e627c)

This issue was referenced by blender/blender-addons-contrib@f270b34e99

This issue was referenced by blender/blender-addons-contrib@f270b34e99beca48f71e1b66c13c3b113d8d75fa

This issue was referenced by f270b34e99

This issue was referenced by f270b34e99beca48f71e1b66c13c3b113d8d75fa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f270b34e99.

Closed by commit f270b34e99.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37675
No description provided.