Fix T37675: blender internal viewport render not updating properly with volumes.