source/blender/render/intern/include/renderdatabase.h
@@ -47,6 +47,7 @@ struct StrandBuffer;
 struct StrandRen;
 struct ObjectInstanceRen;
 struct RadFace;
+struct Isect;
 
 #define RE_QUAD_MASK	0x7FFFFFF
 #define RE_QUAD_OFFS	0x8000000
@@ -112,6 +113,11 @@ struct StrandBuffer *RE_addStrandBuffer(struct ObjectRen *obr, int totvert);
 struct ObjectRen *RE_addRenderObject(struct Render *re, struct Object *ob, struct Object *par, int index, int psysindex, int lay);
 struct ObjectInstanceRen *RE_addRenderInstance(struct Render *re, struct ObjectRen *obr, struct Object *ob, struct Object *par, int index, int psysindex, float mat[4][4], int lay);
 void RE_makeRenderInstances(struct Render *re);
+
+void RE_instance_rotate_ray_start(struct ObjectInstanceRen *obi, struct Isect *is);
+void RE_instance_rotate_ray_dir(struct ObjectInstanceRen *obi, struct Isect *is);
+void RE_instance_rotate_ray(struct ObjectInstanceRen *obi, struct Isect *is);
+void RE_instance_rotate_ray_restore(struct ObjectInstanceRen *obi, struct Isect *is);
 
 float *RE_vertren_get_stress(struct ObjectRen *obr, struct VertRen *ver, int verify);
 float *RE_vertren_get_rad(struct ObjectRen *obr, struct VertRen *ver, int verify);
